novas validaçoes, correções no input e criação utils.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 </box> -->
 <input-v2 
   title="Algum texto" 
-  type="file" 
+  type="phone" 
   error="false" 
   errorMessage="Mensagem de erro custom">
 </input-v2>
