--- a/src/app/input-v2/input-v2.component.scss
+++ b/src/app/input-v2/input-v2.component.scss
@@ -39,7 +39,7 @@
     box-shadow: 0px 0px 5px 5px var(--bg);
     transform: translate(-10px, -20px);
   }
-  .money-icon{
+  .input-icon{
     opacity: 0;
     width: fit-content;
     position: absolute;
