Recriando componente box e realizando ajustes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,4 @@
-<!-- <div class="box"> -->
-  <!-- </div> -->
-<!-- <box title="test">
-  Beta
-</box> -->
-<input-v2 
-  title="Algum texto" 
-  type="phone" 
-  error="false" 
-  errorMessage="Mensagem de erro custom">
-</input-v2>
+<lote-box title="Something About Poyo">
+  algo
+</lote-box>
 <router-outlet></router-outlet>
