Finalizando componente lote-box Criado diretiva writter e click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <lote-box title="Something About Poyo">
   algo
 </lote-box>
+<lote-box title="Something">
+  algo2
+</lote-box>
 <router-outlet></router-outlet>
