--- a/src/app/components/lote-box/lote-box.component.scss
+++ b/src/app/components/lote-box/lote-box.component.scss
@@ -1,75 +1,41 @@
-.lote-box-wrapper{
-  margin: 16px 0px;
-  position: relative;
-  .border-box{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    &.blur{
-      .left-border,
-      .middle-border,
-      .right-border{
-        filter: blur(4px) brightness(2);
-      }
-      .middle-border{
-        .box-title{
-          opacity: 0;
-        }
-      }
-    }
-    .left-border, .right-border{
-      min-width: 10px;
-      border-style: solid;
-      border-width: 2px;
-    }
-    .left-border{
-      border-right: 0px;
-      border-top-right-radius: 0px;
-      border-bottom-right-radius: 0px;
-    }
-    .middle-border{
-      border-bottom-style: solid;
-      border-width: 2px;
-      border-left: 0px;
-      border-right: 0px;
-      border-radius: 0px;
-      .box-title{
-        // user-select: none;
-        display: flex;
-        font-size: 14px;
-        font-weight: bold;
-        gap: 5px;
-        margin: -12px 4px;
-        &:empty{
-          margin: 0px;
-        }
-      }
-    }
-    .right-border{
-      flex-grow: 1;
-      border-left: 0px;
-      border-top-left-radius: 0px;
-      border-bottom-left-radius: 0px;
-    }
+@use "@angular/material" as mat;
+
+@mixin test($theme){
+  $primary: map-get($theme, primary, default);
+  // $background: map-get($theme, background);
+
+
+  .lote-box-wrapper{
+    width: 50%;
+    height: 50%;
+    background-color: rebeccapurple;
   }
-  .content{
-    padding: 6px 8px;
-    padding-top: 12px;
-    transition: grid-template-rows ease-in-out;
-    grid-template-rows: 0fr;
-    display: grid;
-    &.show{
-      grid-template-rows: 1fr;
-    }
-    .box-content{
-      z-index: 1;
-      &.hide{
-        overflow:hidden;
-      }
-      &.show{
-        overflow: visible;
-      }
-    }
-  }
+
+  // .lote-box-wrapper{
+  //   // color: $background;
+  //   position: relative;
+  //   .lote-border {
+  //     position: relative;
+  //     width: 160px;
+  //     height: 160px;
+  //     background-color: blue;
+  //     mix-blend-mode: hard-light;
+  //     &.swap-blend-mode {
+  //       mix-blend-mode: darken;
+  //       .fake-bg {
+  //         transition: none;
+  //         background-color: white;
+  //       }
+  //     }
+  //     .fake-bg {
+  //       position: absolute;
+  //       width: 50%;
+  //       height: 50%;
+  //       left: 25%;
+  //       top: 25%;
+  //       transition: none;
+  //       background-color: rgb(127,127,127);
+  //     }
+  //   }
+  // }
 }
