--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,21 +2,21 @@
 mat.$theme-ignore-duplication-warnings: true;
 @include mat.core();
 
-$light-theme: mat.define-light-theme(
+$light-theme: mat.m2-define-light-theme(
   (
     color: (
-      primary: mat.define-palette(mat.$cyan-palette, 300),
-      accent: mat.define-palette(mat.$green-palette, 400),
-      warn: mat.define-palette(mat.$red-palette, 500),
+      primary: mat.m2-define-palette(mat.$m2-cyan-palette, 300),
+      accent: mat.m2-define-palette(mat.$m2-green-palette, 400),
+      warn: mat.m2-define-palette(mat.$m2-red-palette, 500),
     ),
   )
 );
-$dark-theme: mat.define-dark-theme(
+$dark-theme: mat.m2-define-dark-theme(
   (
     color: (
-      primary: mat.define-palette(mat.$purple-palette, 700),
-      accent: mat.define-palette(mat.$cyan-palette, 700),
-      warn: mat.define-palette(mat.$yellow-palette, 700),
+      primary: mat.m2-define-palette(mat.$m2-purple-palette, 700),
+      accent: mat.m2-define-palette(mat.$m2-cyan-palette, 700),
+      warn: mat.m2-define-palette(mat.$m2-yellow-palette, 700),
     ),
   )
 );
