Atualizando componente lote-border

--- a/src/app/components/lote-border/lote-border.component.html
+++ b/src/app/components/lote-border/lote-border.component.html
@@ -1,2 +1,27 @@
-<div id="frame" class="frame">
+<div class="box">
+  <div class="parent-effect">
+    <div id="frame" class="frame">
+    </div>
+  </div>
+  <div id="title-box" class="title-box">
+    <div id="title" [write]>
+      {{title}}
+    </div>
+    <div>button</div>
+  </div>
+  <div id="content" class="content">
+    <div>My Content</div>
+    <div>My Content</div>
+    <div>My Content</div>
+    <div>My Content</div>
+  </div>
 </div>
+
+<svg style="visibility: hidden; position: absolute;" width="0" height="0" version="1.1">
+  <defs>
+        <filter id="goo"><feGaussianBlur in="SourceGraphic" stdDeviation="1.5" result="blur" />    
+            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 19 -9" result="goo" />
+            <feComposite in="SourceGraphic" in2="goo" operator="atop"/>
+        </filter>
+    </defs>
+</svg>
