--- a/src/app/components/lote-border/lote-border.component.scss
+++ b/src/app/components/lote-border/lote-border.component.scss
@@ -1,6 +1,28 @@
-.frame{
-  transition: all 500ms;
-  background: linear-gradient(#e66465, #9198e5);
-  width: 300px;
-  height: 300px;
+.box{
+  position: relative;
+  min-height: 30px;
+  .parent-effect{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    filter: url('#goo');
+    >.frame{
+      transition: all 500ms;
+      background: linear-gradient(0deg, #e66465, #9198e5);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+    } 
+  }
+  >.title-box{
+    position: absolute;
+    transform: translateY(-50%);
+    width: fit-content;
+    display: flex;
+    gap: 5px;
+    margin: auto;
+  }
+  >.content{
+    position: relative;
+  }
 }
