Correções de exibição ---------------------- ---------------------- Ordem-Servico: SGPS-#9999999

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,10 @@
     </div>
   </div>
   
-  <lote-border [width]="5">
-  </lote-border>
+  <div style="width: 300px;">
+    <lote-border [width]="10">
+    </lote-border>
+  </div>
 
   <!-- <lote-box [(title)]="title">
     <div [write]>
