--- a/src/app/components/lote-border/lote-border.component.html
+++ b/src/app/components/lote-border/lote-border.component.html
@@ -1,5 +1,5 @@
 <div class="box">
-  <div class="parent-effect">
+  <div id="parent-effect" class="parent-effect">
     <div id="frame" class="frame">
     </div>
   </div>
@@ -7,9 +7,12 @@
     <div id="title" [write]>
       {{title}}
     </div>
-    <div>button</div>
+    <!-- <div>button</div> -->
   </div>
   <div id="content" class="content">
+    <div>My Content</div>
+    <div>My Content</div>
+    <div>My Content</div>
     <div>My Content</div>
     <div>My Content</div>
     <div>My Content</div>
