--- a/src/app/components/lote-border/lote-border.component.scss
+++ b/src/app/components/lote-border/lote-border.component.scss
@@ -8,7 +8,7 @@
     filter: url('#goo');
     >.frame{
       transition: all 500ms;
-      background: linear-gradient(0deg, #e66465, #9198e5);
+      background: linear-gradient(0deg, #63007c, #4750ad);
       width: 100%;
       height: 100%;
       position: absolute;
@@ -18,6 +18,7 @@
     position: absolute;
     transform: translateY(-50%);
     width: fit-content;
+    max-width: 100%;
     display: flex;
     gap: 5px;
     margin: auto;
