Correção titulo ---------------------- ---------------------- Ordem-Servico: SGPS-#9999999

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,18 @@
   </div>
   
   <div style="width: 300px;">
-    <lote-border [width]="10">
+    <lote-border 
+      [radius]="2"
+      [width]="10" 
+      [title]="'Gengar | Backwards long jump'">
+      <div ngtitle>from ng</div>
+      <div>My Content</div>
+      <div>My Content</div>
+      <div>My Content</div>
+      <div>My Content</div>
+      <div>My Content</div>
+      <div>My Content</div>
+      <div>My Content</div>      
     </lote-border>
   </div>
 
