--- a/src/app/components/lote-border/lote-border.component.scss
+++ b/src/app/components/lote-border/lote-border.component.scss
@@ -22,6 +22,12 @@
     display: flex;
     gap: 5px;
     margin: auto;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    >#title{
+      text-wrap: nowrap;
+      text-overflow: ellipsis;
+    }
   }
   >.content{
     position: relative;
