Correções visuais e adicionando animação de escrita

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
     <lote-border 
       [radius]="2"
       [width]="10" 
-      [title]="'Gengar | Backwards long jump'">
-      <div ngtitle>from ng</div>
+      [title]="'Backwards long jump'">
+      <!-- <div ngtitle>from ng</div> -->
       <div>My Content</div>
       <div>My Content</div>
       <div>My Content</div>
