--- a/src/app/components/lote-border/lote-border.component.scss
+++ b/src/app/components/lote-border/lote-border.component.scss
@@ -7,8 +7,8 @@
     height: 100%;
     filter: url('#goo');
     >.frame{
-      transition: all 500ms;
-      background: linear-gradient(0deg, #63007c, #4750ad);
+      transition: all 35ms;
+      background: linear-gradient(-45deg, rgb(255, 0, 0), #ffffff, black);
       width: 100%;
       height: 100%;
       position: absolute;
@@ -16,6 +16,7 @@
   }
   >.title-box{
     position: absolute;
+    z-index: 1;
     transform: translateY(-50%);
     width: fit-content;
     max-width: 100%;
