--- a/src/app/components/lote-border/lote-border.component.scss
+++ b/src/app/components/lote-border/lote-border.component.scss
@@ -1,14 +1,14 @@
 .box{
   position: relative;
   min-height: 30px;
-  .parent-effect{
+  >.parent-effect{
     position: absolute;
     width: 100%;
     height: 100%;
     filter: url('#goo');
     >.frame{
       transition: all 35ms;
-      background: linear-gradient(-45deg, rgb(255, 0, 0), #ffffff, black);
+      // background: linear-gradient(-45deg, rgb(255, 0, 0), #ffffff, black);
       width: 100%;
       height: 100%;
       position: absolute;
@@ -32,5 +32,20 @@
   }
   >.content{
     position: relative;
+  }
+}
+
+@mixin loteBorder($theme){
+  $primary: map-get($theme, primary, default);
+  $accent: map-get($theme, accent, default);
+  $warn: map-get($theme, warn, default);
+
+  .box{
+    >.parent-effect{
+      >.frame{
+        background: linear-gradient(135deg, $primary, $warn);
+        // background: linear-gradient(135deg, $primary 60%, $warn);
+      }
+    }
   }
 }
