--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,6 @@
       [radius]="2"
       [width]="10" 
       [title]="'Backwards long jump'">
-      <!-- <div ngtitle>from ng</div> -->
       <div>My Content</div>
       <div>My Content</div>
       <div>My Content</div>
@@ -21,6 +20,8 @@
       <div>My Content</div>      
     </lote-border>
   </div>
+
+  <lote-input></lote-input>
 
   <!-- <lote-box [(title)]="title">
     <div [write]>
