--- a/src/app/components/lote-border/lote-border.component.scss
+++ b/src/app/components/lote-border/lote-border.component.scss
@@ -1,4 +1,6 @@
 .box{
+  margin-top: 12px;
+  transition: all 250ms;
   position: relative;
   min-height: 30px;
   >.parent-effect{
@@ -7,8 +9,6 @@
     height: 100%;
     filter: url('#goo');
     >.frame{
-      transition: all 35ms;
-      // background: linear-gradient(-45deg, rgb(255, 0, 0), #ffffff, black);
       width: 100%;
       height: 100%;
       position: absolute;
@@ -48,4 +48,16 @@
       }
     }
   }
+
+  lote-input{
+    .box{
+      >.parent-effect{
+        >.frame{
+          background: linear-gradient(135deg, $accent 60%, $warn);
+        }
+      }
+    }    
+  }
+
+
 }
