--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,11 +3,8 @@ main{
   height: 100%;
 }
 
-@import 'components/lote-box/lote-box.component';
-@import 'components/lote-border/lote-border.component';
+// @mixin lote-components($theme){
+//   // @include test($theme)
+//   @include loteBorder($theme)
 
-@mixin lote-components($theme){
-  // @include test($theme)
-  @include loteBorder($theme)
-
-}
+// }
