--- a/src/app/components/lote-border/lote-border.component.scss
+++ b/src/app/components/lote-border/lote-border.component.scss
@@ -12,6 +12,7 @@
       width: 100%;
       height: 100%;
       position: absolute;
+      background: red;
     } 
   }
   >.title-box{
@@ -35,29 +36,27 @@
   }
 }
 
-@mixin loteBorder($theme){
-  $primary: map-get($theme, primary, default);
-  $accent: map-get($theme, accent, default);
-  $warn: map-get($theme, warn, default);
+// @mixin loteBorder($theme){
+//   $primary: map-get($theme, primary, default);
+//   $accent: map-get($theme, accent, default);
+//   $warn: map-get($theme, warn, default);
 
-  .box{
-    >.parent-effect{
-      >.frame{
-        background: linear-gradient(135deg, $primary, $warn);
-        // background: linear-gradient(135deg, $primary 60%, $warn);
-      }
-    }
-  }
+//   .box{
+//     >.parent-effect{
+//       >.frame{
+//         background: linear-gradient(135deg, $primary, $warn);
+//         // background: linear-gradient(135deg, $primary 60%, $warn);
+//       }
+//     }
+//   }
 
-  lote-input{
-    .box{
-      >.parent-effect{
-        >.frame{
-          background: linear-gradient(135deg, $accent 60%, $warn);
-        }
-      }
-    }    
-  }
-
-
-}
+//   lote-input{
+//     .box{
+//       >.parent-effect{
+//         >.frame{
+//           background: linear-gradient(135deg, $accent 60%, $warn);
+//         }
+//       }
+//     }    
+//   }
+// }
