--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,26 +2,20 @@
 mat.$theme-ignore-duplication-warnings: true;
 @include mat.core();
 
-$light-theme: mat.m2-define-light-theme(
-  (
-    color: (
-      primary: mat.m2-define-palette(mat.$m2-cyan-palette, 300),
-      accent: mat.m2-define-palette(mat.$m2-green-palette, 400),
-      warn: mat.m2-define-palette(mat.$m2-red-palette, 500),
-    ),
-  )
-);
-$dark-theme: mat.m2-define-dark-theme(
-  (
-    color: (
-      primary: mat.m2-define-palette(mat.$m2-purple-palette, 700),
-      accent: mat.m2-define-palette(mat.$m2-cyan-palette, 700),
-      warn: mat.m2-define-palette(mat.$m2-yellow-palette, 700),
-    ),
-  )
-);
-
-@import "./app/app.component";
+$light-theme: mat.define-theme((
+ color: (
+    theme-type: light,
+    primary: mat.$cyan-palette,
+    tertiary: mat.$red-palette,
+  ),
+));
+$dark-theme: mat.define-theme((
+ color: (
+    theme-type: dark,
+    primary: mat.$violet-palette,
+    tertiary: mat.$yellow-palette,
+  ),
+));
 
 html,
 body {
@@ -38,12 +32,14 @@ html{
     font-family: Roboto, "Helvetica Neue", sans-serif;
   
     &.light {
-      // @include mat.all-component-themes($light-theme);
-      @include lote-components($light-theme);
+      @include mat.all-component-themes($light-theme);
+      // @include lote-components($light-theme);
+      // @include baseLoteTheme($light-theme)
     }
     &.dark {
-      // @include mat.all-component-themes($dark-theme);
-      @include lote-components($dark-theme);
+      @include mat.all-component-themes($dark-theme);
+      // background: mat.get-theme-color($dark-theme, primary, 20);
+      // background: mat.get-theme-color($dark-theme, tertiary, 50);
     }
   }
 }
