--- a/src/app/scss/lote-theme.scss
+++ b/src/app/scss/lote-theme.scss
@@ -1,36 +1,38 @@
 @import './../components/lote-box/lote-box.component';
 @import './../components/lote-border/lote-border.component';
+
+$-border: linear-gradient(135deg, #606060, #a9a9a9);
+@function configure($border: linear-gradient(135deg, #606060, #a9a9a9)){
+  $-border: $border !global
+}
+
+@mixin components($theme){
+  // https://material.angular.io/guide/theming-your-components
+
+
+  @include lote-border($theme)
+
+  // $accent: map-get($theme, accent, default);
+  // $warn: map-get($theme, warn, default);
+  // $border: map-get($theme, border, default);
+  // $background: map-get($theme, background);
+  // @if $primary {
+  //   $-primary: $primary !global;
+  // }
+  // @if $accent {
+  //   $-accent: $accent !global;
+  // }
+  // @if $warn {
+  //   $-warn: $warn !global;
+  // }
+  // @if $border {
+  //   $-border: $border !global;
+  // }
+  // @if $background {
+  //   $-background: $background !global;
+  // }
+
   
-$-primary: purple;
-$-accent: orange;
-$-warn: red;
-$-border: linear-gradient(135deg, $-primary, $-warn);
-$-background: darkslateblue;
-
-@mixin lote-theme($theme){
-  $primary: map-get($theme, primary, default);
-  $accent: map-get($theme, accent, default);
-  $warn: map-get($theme, warn, default);
-  $border: map-get($theme, border, default);
-  $background: map-get($theme, background);
-
-  @if $primary {
-    $-primary: $primary !global;
-  }
-  @if $accent {
-    $-accent: $accent !global;
-  }
-  @if $warn {
-    $-warn: $warn !global;
-  }
-  @if $border {
-    $-border: $border !global;
-  }
-  @if $background {
-    $-background: $background !global;
-  }
-
-
   
 
 
