--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,23 @@
 @use "@angular/material" as mat;
+@use './app/scss/lote-theme' as lote;
+
 mat.$theme-ignore-duplication-warnings: true;
 @include mat.core();
+
+
 
 $light-theme: mat.define-theme((
  color: (
     theme-type: light,
     primary: mat.$cyan-palette,
-    tertiary: mat.$red-palette,
+    tertiary: mat.$azure-palette,
   ),
 ));
 $dark-theme: mat.define-theme((
  color: (
     theme-type: dark,
     primary: mat.$violet-palette,
-    tertiary: mat.$yellow-palette,
+    tertiary: mat.$orange-palette,
   ),
 ));
 
@@ -21,7 +25,6 @@ html,
 body {
   height: 100%;
 }
-
 html{
   a{
     text-decoration: none;
@@ -33,11 +36,12 @@ html{
   
     &.light {
       @include mat.all-component-themes($light-theme);
-      // @include lote-components($light-theme);
+      @include lote.components($light-theme);
       // @include baseLoteTheme($light-theme)
     }
     &.dark {
       @include mat.all-component-themes($dark-theme);
+      @include lote.components($dark-theme);
       // background: mat.get-theme-color($dark-theme, primary, 20);
       // background: mat.get-theme-color($dark-theme, tertiary, 50);
     }
