--- a/src/app/components/lote-input/lote-input.component.html
+++ b/src/app/components/lote-input/lote-input.component.html
@@ -1,3 +1,8 @@
 <lote-border [title]="title">
-  <input type="text">
+  <input type="text" 
+    [(ngModel)]="ngModel"
+    (ngModelChange)="onNgModelChange()"
+    [mask]="getMask()"
+    [dropSpecialCharacters]="inputData.dropMaskChars"
+    >
 </lote-border>
