Adicionando debounce ao input.

--- a/src/app/components/lote-input/lote-input.component.html
+++ b/src/app/components/lote-input/lote-input.component.html
@@ -1,7 +1,7 @@
 <lote-border [title]="title">
   <input type="text" 
     [(ngModel)]="ngModel"
-    (ngModelChange)="onNgModelChange()"
+    (ngModelChange)="onInputValueChange.next('')"
     [mask]="getMask()"
     [dropSpecialCharacters]="inputData.dropMaskChars"
     >
