Criando diretiva de erro (tooltip)

--- a/src/app/components/lote-input/lote-input.component.html
+++ b/src/app/components/lote-input/lote-input.component.html
@@ -1,8 +1,10 @@
 <lote-border [title]="title">
-  <input type="text" 
+  <input [type]=inputData.inputType
     [(ngModel)]="ngModel"
     (ngModelChange)="onInputValueChange.next('')"
     [mask]="getMask()"
     [dropSpecialCharacters]="inputData.dropMaskChars"
     >
+    <!-- test
+    [loteError]="true" -->
 </lote-border>
