Correção em diretiva e criando componente tooltip ---------------------- ---------------------- Ordem-Servico: SGPS-#9999999

--- a/src/app/components/lote-input/lote-input.component.html
+++ b/src/app/components/lote-input/lote-input.component.html
@@ -4,7 +4,10 @@
     (ngModelChange)="onInputValueChange.next('')"
     [mask]="getMask()"
     [dropSpecialCharacters]="inputData.dropMaskChars"
-    >
-    <!-- test
-    [loteError]="true" -->
+    [loteError]="!valid"
+  >
+  <!-- <div>
+    test
+  </div> -->
+  {{valid}}
 </lote-border>
