Criando lotetooltip e alterando cor do input

--- a/src/app/components/lote-input/lote-input.component.html
+++ b/src/app/components/lote-input/lote-input.component.html
@@ -1,4 +1,4 @@
-<lote-border [title]="title">
+<lote-border [title]="title" [ngClass]="{'ng-invalid':!valid}">
   <input [type]=inputData.inputType
     [(ngModel)]="ngModel"
     (ngModelChange)="onInputValueChange.next('')"
@@ -6,8 +6,4 @@
     [dropSpecialCharacters]="inputData.dropMaskChars"
     [loteError]="!valid"
   >
-  <!-- <div>
-    test
-  </div> -->
-  {{valid}}
 </lote-border>
