--- a/src/app/components/lote-tooltip/lote-tooltip.component.html
+++ b/src/app/components/lote-tooltip/lote-tooltip.component.html
@@ -1,1 +1,6 @@
-<p>lote-tooltip works!</p>
+<!-- <p>lote-tooltip works!</p> -->
+<div id="lote-tooltip">
+  <ng-content>    
+    {{text}}
+  </ng-content>
+</div>
