Adicionando tooltip integrado ao input, adicionand o erro costumizado e criando animação com grid-template.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="col-md-6">
       <lote-input
         type="email"
-        title="Input Test">        
+        title="Teste de input">        
       </lote-input>
     </div>
   </div>
