--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,10 @@
   <div class="row">
     <div class="col-md-6">
       <lote-input
-        type="email"
+        [required]="false"
+        [min]="2"
+        [max]="10"
+        type="number"
         title="Teste de input">        
       </lote-input>
     </div>
