Adicionando prefixo e sulfixo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
   <div class="row">
     <div class="col-md-6">
       <lote-input
-        [required]="false"
+        [required]="true"
         [min]="2"
         [max]="10"
-        type="number"
+        type="money"
         title="Teste de input">        
       </lote-input>
     </div>
