--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         [required]="true"
         [min]="2"
         [max]="10"
-        type="money"
+        type="time"
         title="Teste de input">        
       </lote-input>
     </div>
