Correções e criando validação de Hora/Tempo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="col-md-6">
       <lote-input
         [required]="true"
-        [min]="2"
+        [min]="'2:2:3'"
         [max]="10"
         type="time"
         title="Teste de input">        
