Criando validação de data e correção de mascara

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,9 +9,9 @@
     <div class="col-md-6">
       <lote-input
         [required]="true"
-        [min]="'2:2:3'"
-        [max]="10"
-        type="time"
+        [min]="'2/2/2002'"
+        [max]="'20/10/2020'"
+        type="date"
         title="Teste de input">        
       </lote-input>
     </div>
