Adicionando algumas documentações

--- a/src/app/components/lote-input/lote-input.component.html
+++ b/src/app/components/lote-input/lote-input.component.html
@@ -2,8 +2,8 @@
   [ngClass]="{'ng-invalid':!valid}"
   [gridTemplate]="gridTemplate"
 >
-<!-- [inputTransformFn]="makeSomeFixes" -->
-  <input [type]=inputData.inputType
+<input [type]=inputData.inputType
+    [inputTransformFn]="maskAdjustment"
     [prefix]="prefix||''"
     [suffix]="suffix||''"
     [dropSpecialCharacters]="inputData.dropMaskChars"
