--- a/src/app/components/lote-input/lote-input.component.html
+++ b/src/app/components/lote-input/lote-input.component.html
@@ -6,6 +6,7 @@
   [type]=inputData.inputType
   [(ngModel)]="ngModel"
   (ngModelChange)="onNgModelChange()"
+  mask
 >
 
 <!-- <input [type]=inputData.inputType
